// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index docker 1`] = `
Object {
  "jobs": Object {
    "cancel-existing": Object {
      "if": "!contains(github.event.head_commit.message, '[skip ci]')",
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "env": Object {
            "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
          },
          "uses": "rokroskar/workflow-run-cleanup-action@v0.3.0",
        },
      ],
    },
    "release": Object {
      "needs": "test",
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "uses": "actions/checkout@v2",
          "with": Object {
            "lfs": true,
          },
        },
        Object {
          "uses": "actions/setup-node@v2",
          "with": Object {
            "node-version": 12,
          },
        },
        Object {
          "run": "git config --global user.email \\"actions@github.com\\"",
        },
        Object {
          "run": "git config --global user.name \\"GitHub Actions\\"",
        },
        Object {
          "run": "yarn --frozen-lockfile",
        },
        Object {
          "run": "yarn lint",
        },
        Object {
          "env": Object {
            "GITHUB_REPOSITORY": "\${{ secrets.GITHUB_REPOSITORY }}",
            "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
          },
          "name": "Push changed files",
          "run": "yarn dw-ci push-changed-files",
        },
        Object {
          "env": Object {
            "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
            "NPM_TOKEN": "\${{ secrets.NPM_TOKEN }}",
          },
          "if": "github.ref == 'refs/heads/master'",
          "name": "Release",
          "run": "yarn semantic-release",
        },
      ],
    },
    "test": Object {
      "needs": "cancel-existing",
      "runs-on": "\${{ matrix.os }}",
      "steps": Array [
        Object {
          "uses": "actions/checkout@v2",
          "with": Object {
            "lfs": true,
          },
        },
        Object {
          "uses": "actions/setup-node@v2",
          "with": Object {
            "node-version": "\${{ matrix.node }}",
          },
        },
        Object {
          "run": "yarn --frozen-lockfile",
        },
        Object {
          "run": "yarn test",
        },
        Object {
          "run": "yarn check-unknown-files",
        },
        Object {
          "env": Object {
            "COVERALLS_GIT_BRANCH": "\${{ github.ref }}",
            "COVERALLS_GIT_COMMIT": "\${{ github.sha }}",
            "COVERALLS_REPO_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
            "COVERALLS_SERVICE_NAME": "github",
          },
          "if": "matrix.os == 'ubuntu-latest' && matrix.node == 12",
          "name": "Coveralls",
          "run": "yarn dw-ci coveralls",
        },
      ],
      "strategy": Object {
        "matrix": Object {
          "node": Array [
            10,
            12,
          ],
          "os": Array [
            "ubuntu-latest",
          ],
        },
      },
    },
  },
  "name": "build",
  "on": Object {
    "push": Object {
      "branches": Array [
        "**",
      ],
    },
  },
}
`;

exports[`index job matrix 1`] = `
Object {
  "jobs": Object {
    "cancel-existing": Object {
      "if": "!contains(github.event.head_commit.message, '[skip ci]')",
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "env": Object {
            "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
          },
          "uses": "rokroskar/workflow-run-cleanup-action@v0.3.0",
        },
      ],
    },
    "release": Object {
      "needs": "test",
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "uses": "actions/checkout@v2",
          "with": Object {
            "lfs": true,
          },
        },
        Object {
          "uses": "actions/setup-node@v2",
          "with": Object {
            "node-version": 12,
          },
        },
        Object {
          "run": "git config --global user.email \\"actions@github.com\\"",
        },
        Object {
          "run": "git config --global user.name \\"GitHub Actions\\"",
        },
        Object {
          "run": "yarn --frozen-lockfile",
        },
        Object {
          "run": "yarn lint",
        },
        Object {
          "env": Object {
            "GITHUB_REPOSITORY": "\${{ secrets.GITHUB_REPOSITORY }}",
            "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
          },
          "name": "Push changed files",
          "run": "yarn dw-ci push-changed-files",
        },
        Object {
          "env": Object {
            "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
            "NPM_TOKEN": "\${{ secrets.NPM_TOKEN }}",
          },
          "if": "github.ref == 'refs/heads/master'",
          "name": "Release",
          "run": "yarn semantic-release",
        },
      ],
    },
    "test": Object {
      "needs": "cancel-existing",
      "runs-on": "\${{ matrix.os }}",
      "steps": Array [
        Object {
          "uses": "actions/checkout@v2",
          "with": Object {
            "lfs": true,
          },
        },
        Object {
          "uses": "actions/setup-node@v2",
          "with": Object {
            "node-version": "\${{ matrix.node }}",
          },
        },
        Object {
          "run": "yarn --frozen-lockfile",
        },
        Object {
          "run": "yarn test",
        },
        Object {
          "run": "yarn check-unknown-files",
        },
        Object {
          "env": Object {
            "COVERALLS_GIT_BRANCH": "\${{ github.ref }}",
            "COVERALLS_GIT_COMMIT": "\${{ github.sha }}",
            "COVERALLS_REPO_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
            "COVERALLS_SERVICE_NAME": "github",
          },
          "if": "matrix.os == 'ubuntu-latest' && matrix.node == 12",
          "name": "Coveralls",
          "run": "yarn dw-ci coveralls",
        },
      ],
      "strategy": Object {
        "matrix": Object {
          "exclude": Array [
            Object {
              "node": 10,
              "os": "macos-latest",
            },
            Object {
              "node": 10,
              "os": "windows-latest",
            },
          ],
          "node": Array [
            10,
            12,
          ],
          "os": Array [
            "macos-latest",
            "windows-latest",
            "ubuntu-latest",
          ],
        },
      },
    },
  },
  "name": "build",
  "on": Object {
    "push": Object {
      "branches": Array [
        "**",
      ],
    },
  },
}
`;

exports[`index no job matrix 1`] = `
Object {
  "jobs": Object {
    "build": Object {
      "if": "!contains(github.event.head_commit.message, '[skip ci]')",
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "env": Object {
            "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
          },
          "uses": "rokroskar/workflow-run-cleanup-action@v0.3.0",
        },
        Object {
          "uses": "actions/checkout@v2",
          "with": Object {
            "lfs": true,
          },
        },
        Object {
          "uses": "actions/setup-node@v2",
          "with": Object {
            "node-version": 12,
          },
        },
        Object {
          "run": "git config --global user.email \\"actions@github.com\\"",
        },
        Object {
          "run": "git config --global user.name \\"GitHub Actions\\"",
        },
        Object {
          "run": "yarn --frozen-lockfile",
        },
        Object {
          "run": "yarn test",
        },
        Object {
          "run": "yarn check-unknown-files",
        },
        Object {
          "env": Object {
            "GITHUB_REPOSITORY": "\${{ secrets.GITHUB_REPOSITORY }}",
            "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
          },
          "name": "Push changed files",
          "run": "yarn dw-ci push-changed-files",
        },
        Object {
          "env": Object {
            "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
            "NPM_TOKEN": "\${{ secrets.NPM_TOKEN }}",
          },
          "if": "github.ref == 'refs/heads/master'",
          "name": "Release",
          "run": "yarn semantic-release",
        },
      ],
    },
  },
  "name": "build",
  "on": Object {
    "push": Object {
      "branches": Array [
        "**",
      ],
    },
  },
}
`;
